Обновлены плагины для редиректов в конфигурациях Caddy, AdGuard и Homepage, заменив старые названия на новые.

--- a/docker-proxy/compose.d/10-adguard.yml
+++ b/docker-proxy/compose.d/10-adguard.yml
@@ -56,9 +56,9 @@ services:
       - traefik.http.middlewares.adguard-basic-auth.basicauth.realm=AdGuardHome
 
       # Редирект: добавляем префикс /${URI_ADGUARD_PANEL} к Location
-      - traefik.http.middlewares.redirect-adguard-panel.plugin.RewriteHeaders.rewrites.0.header=Location
-      - traefik.http.middlewares.redirect-adguard-panel.plugin.RewriteHeaders.rewrites.0.regex=^/(.*)
-      - traefik.http.middlewares.redirect-adguard-panel.plugin.RewriteHeaders.rewrites.0.replacement=/${URI_ADGUARD_PANEL}/$1
+      - traefik.http.middlewares.redirect-adguard-panel.plugin.traefik-plugin-rewrite-headers.rewrites.0.header=Location
+      - traefik.http.middlewares.redirect-adguard-panel.plugin.traefik-plugin-rewrite-headers.rewrites.0.regex=^/(.*)
+      - traefik.http.middlewares.redirect-adguard-panel.plugin.traefik-plugin-rewrite-headers.rewrites.0.replacement=/${URI_ADGUARD_PANEL}/$1
 
       # Снятие префикса
       - traefik.http.middlewares.strip-adguard-prefix.stripPrefix.prefixes=/${URI_ADGUARD_PANEL}
