Обновлены конфигурации Docker Compose: изменены пути к env-файлам, добавлены внешние сети, улучшена обработка ошибок и обновлены шаги установки в меню.

--- a/docker-proxy/compose.d/00-base.yml
+++ b/docker-proxy/compose.d/00-base.yml
@@ -4,12 +4,11 @@
 
 networks:
   traefik-proxy:
+    name: traefik-proxy
     external: true
   dns-net:
-    internal: true
-    ipam:
-      config:
-        - subnet: "172.19.0.0/24"
+    name: dns-net
+    external: true
 
 volumes:
   crowdsec_data:
