--- a/docker-proxy/compose.d/05-caddy.yml
+++ b/docker-proxy/compose.d/05-caddy.yml
@@ -22,7 +22,7 @@ services:
       - /opt/docker-proxy/caddy/subs:/srv/subs:ro
       # - /opt/docker-proxy/caddy/site:/srv
     env_file:
-      - /opt/docker-proxy/.env
+      - ./.env
     security_opt:
       - no-new-privileges=true
     healthcheck:
