--- a/docker-proxy/compose.d/06-traefik.yml
+++ b/docker-proxy/compose.d/06-traefik.yml
@@ -11,7 +11,7 @@ services:
       dozzle:
         condition: service_healthy
     env_file:
-      - /opt/docker-proxy/.env
+      - ./.env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /opt/docker-proxy/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
@@ -23,7 +23,7 @@ services:
       - "443:443/tcp"
       - "443:443/udp"
       - "4443:4443/tcp"
-    entrypoint: ["sh", "-c", "chmod 600 /acme.json && exec traefik"]
+    entrypoint: ["sh", "-c", "touch /acme.json && chmod 600 /acme.json && chown root:root /acme.json && exec traefik"]
     networks:
       traefik-proxy:
         ipv4_address: 172.18.0.6
