--- a/docker-proxy/compose.d/06-traefik.yml
+++ b/docker-proxy/compose.d/06-traefik.yml
@@ -11,7 +11,7 @@ services:
       dozzle:
         condition: service_healthy
     env_file:
-      - ./.env
+      - /opt/docker-proxy/compose.d/.env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /opt/docker-proxy/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
