--- a/docker-proxy/compose.d/07-dozzle.yml
+++ b/docker-proxy/compose.d/07-dozzle.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     env_file:
-      - ./.env
+      - /opt/docker-proxy/compose.d/.env
     environment:
       - DOZZLE_ENABLE_ACTIONS=true
       - DOZZLE_BASE=/${URI_DOZZLE}
