--- a/docker-proxy/compose.d/14-lampac.yml
+++ b/docker-proxy/compose.d/14-lampac.yml
@@ -24,7 +24,7 @@ services:
       traefik:
         condition: service_healthy
     env_file:
-      - ./.env
+      - /opt/docker-proxy/compose.d/.env
     volumes:
       - lampac_cache:/home/cache
       - /opt/docker-proxy/lampac/home/init.conf:/home/init.conf:rw
