--- a/docker-proxy/compose.d/12-3x-ui.yml
+++ b/docker-proxy/compose.d/12-3x-ui.yml
@@ -121,7 +121,7 @@ services:
       - traefik.http.routers.3xui-sub.priority=9998
 
       # L4-режим для xhttp (TCP)
-      - traefik.http.routers.xhttp3xui-l4.rule=Host(`${WEBDOMAIN}`) && PathPrefix(`/${URI_VLESS_XHTTP}`)
+      - traefik.http.routers.xhttp3xui-l4.rule=Host(`${WEBDOMAIN}`) && PathPrefix(`${URI_VLESS_XHTTP}`)
       - traefik.http.routers.xhttp3xui-l4.entrypoints=l4tcp
       - traefik.http.routers.xhttp3xui-l4.service=xhttp3xui-svc
       - traefik.http.routers.xhttp3xui-l4.priority=9999
