--- a/docker-proxy/compose.d/03-crowdsec.yml
+++ b/docker-proxy/compose.d/03-crowdsec.yml
@@ -34,6 +34,7 @@ services:
       - /opt/docker-proxy/crowdsec/acquis.yaml:/etc/crowdsec/acquis.yaml
       - crowdsec_data:/var/lib/crowdsec/data
       - crowdsec_config:/etc/crowdsec
+      - /opt/docker-proxy/crowdsec/appsec-trusted-proxies.yaml:/etc/crowdsec/appsec-configs/appsec-trusted-proxies.yaml:ro
       - /var/log:/var/log:ro
       - /opt/docker-proxy/_logs:/var/logs:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
