--- a/docker-proxy/crowdsec/acquis.yaml
+++ b/docker-proxy/crowdsec/acquis.yaml
@@ -32,7 +32,9 @@ labels:
 ---
 name: AppSecComponent
 listen_addr: 0.0.0.0:7422
-appsec_config: crowdsecurity/virtual-patching
+appsec_configs:
+  - crowdsecurity/virtual-patching
+  - /etc/crowdsec/appsec-configs/appsec-trusted-proxies.yaml
 source: appsec
 labels:
   type: appsec
