--- a/docker-proxy/crowdsec/acquis.yaml
+++ b/docker-proxy/crowdsec/acquis.yaml
@@ -33,8 +33,8 @@ labels:
 name: AppSecComponent
 listen_addr: 0.0.0.0:7422
 appsec_configs:
+  - crowdsecurity/appsec-default
   - crowdsecurity/virtual-patching
-  - /etc/crowdsec/appsec-configs/appsec-trusted-proxies.yaml
 source: appsec
 labels:
   type: appsec
