--- a/docker-proxy/lampac/home/init.conf
+++ b/docker-proxy/lampac/home/init.conf
@@ -9,8 +9,8 @@
       "torrserver": false
     }
   },
-  "firefox": {
-    "enable": true
+  "firefox": {  
+    "enable": true 
   },
   "dlna": {
     "enable": false
@@ -70,7 +70,8 @@
       "name": "github",
       "pattern": "github\\.com|raw\\.githubusercontent\\.com",
       "list": [
-        "socks5://warp:1080"
+        "socks5://warp:1080",
+        "socks5://tor-proxy:9150"
       ]
     }
   ],
