--- a/docker-proxy/compose.d/11-tor-proxy.yml
+++ b/docker-proxy/compose.d/11-tor-proxy.yml
@@ -1,7 +1,7 @@
 services:
   tor-proxy:
     container_name: tor-proxy
-    image: peterdavehello/tor-socks-proxy:latest
+    image: dperson/torproxy
     restart: unless-stopped
     # ports:
     ## SOCKS
@@ -10,12 +10,12 @@ services:
     #   - 127.0.0.1:8853:8853/tcp
     healthcheck:
       test: >
-        curl --fail --silent --socks5-hostname tor-proxy:9150 https://check.torproject.org/api/ip
+        curl --fail --silent --socks5-hostname tor-proxy:9050 https://check.torproject.org/api/ip
         | grep '"IsTor":true'
       interval: 30s
-      timeout: 10s
+      timeout: 30s
       retries: 3
-      start_period: 20s
+      start_period: 30s
     networks:
       traefik-proxy:
         ipv4_address: 172.18.0.11
